<resources>
    <string name="app_name">Family Map</string>

    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="emailAddress">Email:</string>

    <string name="serverHost">Server Host:</string>
    <string name="serverPost">Server Port:</string>
    <string name="userName">User Name:</string>
    <string name="password">Password:</string>

    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="registerButton">REGISTER</string>
    <string name="loginButton">SIGN IN</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mapFragmentMessage">Click a Marker to see event details</string>
    <string name="icon_image">icon_image</string>
    <string name="first_name">First Name</string>
    <string name="sample_name">Sample Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender_">Gender</string>
    <string name="life_events">LIFE EVENTS</string>
    <string name="family">FAMILY</string>
    <string name="searchMenu">Search Menu</string>
    <string name="settings">settings</string>
    <string name="search_text">Search:</string>
    <string name="life_story_line_key">lifeStoryLines</string>
    <string name="life_story_lines_title">Life Story Lines</string>
    <string name="life_story_lines_summary">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines_key">familyTreeLines</string>
    <string name="family_tree_lines_title">Family Tree Lines</string>
    <string name="family_tree_lines_summary">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines_key">spouseLine</string>
    <string name="spouse_lines_title">Spouse Lines</string>
    <string name="spouse_lines_summary">SHOW SPOUSE LINES</string>
    <string name="father_side_key">fatherSide</string>
    <string name="father_side_title">Father\'s Side</string>
    <string name="father_side_summary">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_side_key">motherSide</string>
    <string name="mother_side_title">Mother\'s Side</string>
    <string name="mother_side_summary">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="filter_male_key">filterMales</string>
    <string name="filter_male_title">Male Events</string>
    <string name="filter_male_summary">FILTER EVENTS BASED ON GENDER</string>
    <string name="filter_female_key">filterFemales</string>
    <string name="filter_female_title">Female Events</string>
    <string name="filter_female_summary">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout_key">logout</string>
    <string name="logout_title">Logout</string>
    <string name="logout_summary">RETURN TO LOGIN SCREEN</string>

</resources>