<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/life_story_line_key"
        android:summary="@string/life_story_lines_summary"
        android:title="@string/life_story_lines_title" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/family_tree_lines_key"
        android:summary="@string/family_tree_lines_summary"
        android:title="@string/family_tree_lines_title" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/spouse_lines_key"
        android:summary="@string/spouse_lines_summary"
        android:title="@string/spouse_lines_title" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/father_side_key"
        android:summary="@string/father_side_summary"
        android:title="@string/father_side_title" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/mother_side_key"
        android:summary="@string/mother_side_summary"
        android:title="@string/mother_side_title" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/filter_male_key"
        android:summary="@string/filter_male_summary"
        android:title="@string/filter_male_title" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/filter_female_key"
        android:summary="@string/filter_female_summary"
        android:title="@string/filter_female_title" />
    <Preference
        android:key="@string/logout_key"
        android:summary="@string/logout_summary"
        android:title="@string/logout_title" />

</PreferenceScreen>